--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.4">
     <title>Shared Canvas</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script src="/static/script.js"></script>
@@ -16,9 +16,59 @@
 
     <!-- Button row above canvas -->
     <div class="button-row">
-        <button class="button" onclick="onClearOrigin()">CLEAR</button>
-        <button class="button">UNDO</button>
-        <button class="button">ERASER</button>
+
+
+        <div class="button-container">
+            <div class="info-circle">
+                <div class="info-icon">?</div>
+                <div class="info-text">This is more information.</div>
+                
+            </div>
+            <button class="button" onclick="onClearOrigin()">CLEAR</button>
+        </div>
+
+
+        <div class="button-container">
+            <div class="info-circle">
+                <div class="info-icon">?</div>
+                <div class="info-text">This is more information.</div>
+                
+            </div>
+            <button class="button" onclick="onEraser(this)">ERASER</button>
+        </div>
+
+        
+        <div class="button-container">
+            <div class="info-circle">
+                <div class="info-icon">?</div>
+                <div class="info-text">This is more information.</div>
+                
+            </div>
+            <button class="button" onclick="onGuessOrigin()">GUESSER</button>
+        </div>
+
+
+
+        <div class="button-container">
+            <div class="info-circle">
+                <div class="info-icon">?</div>
+                <div class="info-text">This is more information.</div>
+                
+            </div>
+            <button class="button">SAVE</button>
+        </div>
+
+
+        <div class="button-container">
+            <div class="info-circle">
+                <div class="info-icon">?</div>
+                <div class="info-text">This is more information.</div>
+                
+            </div>
+            <button class="button">LOAD</button>
+        </div>
+
+        
     </div>
     <!-- Canvas and text above it -->
     <div id ="canvas-holder" >
