--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@ html, body
     background-attachment: fixed;
 }
 
+
 body
 {
     font-family:'Courier New', Courier, monospace;
@@ -18,6 +19,7 @@ body
     cursor: default; /* Default cursor */
 }
 
+
 .canvas-holder
 {
     background-color: #1a1a1a;
@@ -25,17 +27,18 @@ body
     display: flex; /* Use flexbox for centering content */
     align-items: center; /* Center content vertically */
     justify-content: center; /* Center content horizontally */
-
 }
+
 
 canvas 
 {
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-    animation: pop 0.5s ease forwards;
+    animation: pop 0.4s ease forwards;
     background-color: rgb(30, 30, 30);
 }
+
 
 @keyframes pop {
     0% {
@@ -43,13 +46,14 @@ canvas
         opacity: 0;
     }
     50% {
-        transform: scale(1.1);
+        transform: scale(1.05);
         opacity: 1;
     }
     100% {
         transform: scale(1);
     }
 }
+
 
 .button-row 
 {
@@ -58,10 +62,12 @@ canvas
     margin-bottom: 20px; /* Space between buttons and the div */
 }
 
+
 .button-container {
     position: relative;
     /* margin: 10px; */
 }
+
 
 .button 
 {
@@ -69,7 +75,7 @@ canvas
     padding: 10px 20px; /* Button padding */
     background-color: gray; /* Button background color */
     color: rgb(220, 220, 220); /* Button text color */
-    border: none; /* Remove border */
+    border: 1px solid black;
     border-radius: 5px; /* Rounded corners */
     cursor: pointer; /* Pointer cursor on hover */
     transition: 0.3s ease-in-out transform; /* Smooth background color transition */
@@ -77,11 +83,13 @@ canvas
 
 }
 
+
 .button:hover
 {
-    transform: scale(1.15);
+    background-color: transparent;
+    border: 1px solid black;
+    border-color: gainsboro;
 }
-
 
 
 
@@ -106,6 +114,7 @@ canvas
     display: inline-block;
 }
 
+
 .info-text {
     position: absolute;
     left: 30px;
@@ -120,10 +129,28 @@ canvas
     z-index: 1;
 }
 
+
 .info-circle:hover .info-text {
     opacity: 1;
 }
 
 .info-circle:hover{
     opacity: 1;
+}
+
+
+.info-el
+{
+    text-align: center;
+    font-size: 16px;
+    white-space: nowrap;
+    transition: opacity 0.3s ease;
+}
+
+p
+{
+    box-shadow: 0 1px 8px gray;
+    background-color: rgb(30, 30, 30);
+    color: rgb(220, 220, 220); /* Button text color */
+    font-size: large;
 }
