--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,11 @@ canvas
     border-color: gainsboro;
 }
 
+.button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+}
+
 
 
 .info-circle {
