--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,9 @@ html, body
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 
@@ -12,15 +15,34 @@ body
     font-family:'Courier New', Courier, monospace;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    margin-top: 5%; /* Remove default margin */
-    cursor: default; /* Default cursor */
+    justify-content: center;
+    align-items: center;
+    margin-top: 3%;
+    cursor: default;
+    
+}
+
+
+@media (max-width: 800px) 
+{
+    body 
+    {
+      flex-direction: column;
+      margin-left: 10%;
+      margin-top: 10%;
+    }
+}
+
+
+.content
+{
+    position: relative;
 }
 
 
 .canvas-holder
 {
+    margin-left: auto;
     background-color: #1a1a1a;
     text-align: center;
     display: flex; /* Use flexbox for centering content */
@@ -58,15 +80,27 @@ canvas
 {
     gap: 20px; /* Space between buttons */
     margin-bottom: 20px; /* Space between buttons and the div */
-
+    
     text-align: center;
     display: flex;
-    align-items: center;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
+@media (max-width: 800px) 
+{
+    .button-row  
+    {
+      flex-direction: column;
+      margin-top: 10%;
+      gap: 40px;
+    }
+}
 
-.button-container {
+.button-container 
+{
     position: relative;
     /* margin: 10px; */
 }
