random nickname for users

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,6 @@
             </div>
 
 
-
             <div class="button-container">
                 <div class="info-circle">
                     <div class="info-icon">?</div>
@@ -111,6 +110,14 @@
             </div>
 
 
+            <div class="button-container">
+                <div class="info-circle">
+                    <div class="info-icon">?</div>
+                    <div class="info-text">Leave room, close if empty.</div>
+                    
+                </div>
+                <button class="button" onclick="leaveRoom(this)">LEAVE</button>
+            </div>
             
         </div>
 
