--- a/static/style.css
+++ b/static/style.css
@@ -4,9 +4,9 @@ html, body
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    /* width: 100%;
+    height: 100%; */
+    /* overflow: hidden; */
 }
 
 
@@ -17,9 +17,8 @@ body
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 3%;
+    margin-top: 5%;
     cursor: default;
-    
 }
 
 
@@ -75,6 +74,11 @@ canvas
     }
 }
 
+.content-info
+{
+    display: inline-block;
+}
+
 
 .button-row 
 {
@@ -95,8 +99,9 @@ canvas
     {
       flex-direction: column;
       margin-top: 10%;
-      gap: 40px;
+      gap: 30px;
     }
+
 }
 
 .button-container 
@@ -117,7 +122,6 @@ canvas
     cursor: pointer; /* Pointer cursor on hover */
     transition: 0.3s ease-in-out transform; /* Smooth background color transition */
     font-size: large;
-
 }
 
 
@@ -202,6 +206,8 @@ p
     box-shadow: 0px 0px 8px gray;
     color: rgb(220, 220, 220);
     font-size: large;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .removeable:hover
