--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
                     <div class="info-text">Reset the canvas to all.</div>
                     
                 </div>
-                <button class="button c-button" onclick="onClearOrigin(this)">CLEAR</button>
+                <button class="button c-button highlight" onclick="onClearOrigin(this)">CLEAR</button>
             </div>
 
 
